--- a/Filmpje Dana ulery.html
+++ b/Filmpje Dana ulery.html
@@ -2,6 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <style>
+    body {
+      background-color: green;
+    }
+  </style>
     <title>Filmpje Dana ulery</title>
   </head>
   <body>
@@ -9,9 +14,9 @@
     <a href="index.html">Home</a>
     <a href="Over dana Urley.html">over Dana Ulery</a>
     <a href="Haar Cariere.html">Haar Cariere</a>
-    <a href="wat heeft ze allemaal gedaan.html">wat heeft ze allemaal gedaan</a>
+    <a href="wat heeft ze allemaal gedaan.html">Wat heeft ze allemaal gedaan</a>
     <a href="Filmpje Dana ulery.html">Filmpje Dana ulery</a>
-    <a href="contact.html">contact</a>
+    <a href="contact.html">Contact</a>
 
     <h1>Filmpje</h1>
 
