--- a/Over dana Urley.html
+++ b/Over dana Urley.html
@@ -2,22 +2,27 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <style>
+      body {
+        background-color: red;
+      }
+    </style>
     <title>over Dana ulery</title>
   </head>
   <body>
     <a href="index.html">Home</a>
-    <a href="Over dana Urley">over Dana Ulery</a>
+    <a href="Over dana Urley">Over Dana Ulery</a>
     <a href="Haar Cariere.html">Haar Cariere</a>
-    <a href="wat heeft ze allemaal gedaan.html">wat heeft ze allemaal gedaan</a>
+    <a href="wat heeft ze allemaal gedaan.html">Wat heeft ze allemaal gedaan</a>
     <a href="Filmpje Dana ulery.html">Filmpje Dana ulery</a>
-    <a href="contact.html">contact</a>
+    <a href="contact.html">Contact</a>
     <h1>Over Dana Ulery</h1>
 
 <img src="Dana Ulery.jpg" alt=""
 
-    <img src="nasa.jpg" alt="">Dana Ulery (1938) is een Amerikaanse informaticus en pionier in de toepassingen van computationele wetenschap.
+    <img src="nasa.jpg" alt=""><p>Dana Ulery (1938) is een Amerikaanse informaticus en pionier in de toepassingen van computationele wetenschap.
     Ze startte haar professionele carrière in 1961 als eerste vrouwelijke werktuigkundige
-    in het Jet Propulsion Laboratory van de NASA in Pasadena (Californié, Verenigde Staten).
+    in het Jet Propulsion Laboratory van de<a href="https://www.nasa.gov/"a href>NASA in Pasadena (Californié, Verenigde Staten).</p>
 
 
 <img src="nasa.jpg" alt=""> <img src="Capture Dana Ulery.PNG" alt="">
