--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    
+    <style>
+          body {
+            background-color: green;
+          }
+        </style>
+
+
     <title>Dana Urley</title>
   </head>
   <body>
     <a href="index.html">Home</a>
-    <a href="Over dana Urley.html">over Dana Ulery</a>
+    <a href="Over dana Urley.html">Over Dana Ulery</a>
     <a href="Haar Cariere.html">Haar Cariere</a>
-    <a href="wat heeft ze allemaal gedaan.html">wat heeft ze allemaal gedaan</a>
+    <a href="wat heeft ze allemaal gedaan.html">Wat heeft ze allemaal gedaan</a>
     <a href="Filmpje Dana ulery.html">Filmpje Dana ulery</a>
-    <a href="contact.html">contact</a>
+    <a href="contact.html">Contact</a>
     <h1>Dana Ulery </h1>
-
-
-hoi ik ben Remu Klaver en dit mijn eerste Websiteen dit is hem dana
-
+      <p>hoi ik ben Remu Klaver en dit mijn eerste Website en dit is hem dan</p>
 <img src="Dana Ulery.jpg" alt=""
 
   </body>
