--- a/Filmpje Dana ulery.html
+++ b/Filmpje Dana ulery.html
@@ -14,11 +14,13 @@
     <a href="index.html">Home</a>
     <a href="Over dana Urley.html">over Dana Ulery</a>
     <a href="Haar Cariere.html">Haar Cariere</a>
-    <a href="wat heeft ze allemaal gedaan.html">Wat heeft ze allemaal gedaan</a>
-    <a href="Filmpje Dana ulery.html">Filmpje Dana ulery</a>
+    <a href="wat heeft ze allemaal gedaan.html">levensloop</a>
+    <a href="Filmpje Dana ulery.html">Filmpje</a>
     <a href="contact.html">Contact</a>
 
-    <h1>Filmpje</h1>
+    <h1>Filmpje</h1>filmpje over Dane ulerys leven
+
+      dit is een
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/nCaH7WuQRE8?start=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </body>
