--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,21 @@
       background-color: green;
     }
   </style>
-    <title>contact</title>
+    <title>Contact</title>
   </head>
   <body>
     <a href="index.html">Home</a>
     <a href="Over dana Urley.html">Over Dana Ulery</a>
     <a href="Haar Cariere.html">Haar Cariere</a>
-    <a href="wat heeft ze allemaal gedaan.html">Wat heeft ze allemaal gedaan</a>
-    <a href="Filmpje Dana ulery.html">Filmpje Dana ulery</a>
+    <a href="wat heeft ze allemaal gedaan.html">levensloop</a>
+    <a href="Filmpje Dana ulery.html">Filmpje</a>
     <a href="contact.html">Contact</a>
 
     <h1>contact</h1>
 
     <img height="200" src="Capture school.PNG" alt="">
 
-    <p>Ik ben Remu Klaver en ik zit om het MML</p>
+    <p>Ik ben Remu Klaver en ik zit om het MML
+      U kunt mij mailen via:remu.klaver@coderclass.nl</p>
   </body>
 </html>
