--- a/Haar Cariere.html
+++ b/Haar Cariere.html
@@ -13,13 +13,13 @@
     <a href="index.html">Home</a>
     <a href="Over dana Urley.html">Over Dana Ulery</a>
     <a href="Haar Cariere.html">Haar Cariere</a>
-    <a href="wat heeft ze allemaal gedaan.html">Wat heeft ze allemaal gedaan</a>
-    <a href="Filmpje Dana ulery.html">Filmpje Dana ulery</a>
+    <a href="wat heeft ze allemaal gedaan.html">levensloop</a>
+    <a href="Filmpje Dana ulery.html">Filmpje</a>
     <a href="contact.html">Contact</a>
     <h1>Haar Cariere</h1>
     <p>In de loop van haar carrière heeft Ulery verschillende posities gehad als onderzoeker van toegepaste wetenschappen
     en technologie en als manager in de industrie, wetenschap en regering.
     In 2007 ging ze met pensioen na haar functie als hoofd-wetenschapper van het directoraat "Computational and Information Sciences"
-    van het Army Research Laboratory (ARL).</p><img src="Dana Ulery.jpg" alt=""
+    van het Army Research Laboratory (ARL).</p>
   </body>
 </html>
