--- a/Over dana Urley.html
+++ b/Over dana Urley.html
@@ -13,12 +13,10 @@
     <a href="index.html">Home</a>
     <a href="Over dana Urley">Over Dana Ulery</a>
     <a href="Haar Cariere.html">Haar Cariere</a>
-    <a href="wat heeft ze allemaal gedaan.html">Wat heeft ze allemaal gedaan</a>
-    <a href="Filmpje Dana ulery.html">Filmpje Dana ulery</a>
+    <a href="wat heeft ze allemaal gedaan.html">levensloop</a>
+    <a href="Filmpje Dana ulery.html">Filmpje</a>
     <a href="contact.html">Contact</a>
     <h1>Over Dana Ulery</h1>
-
-<img src="Dana Ulery.jpg" alt=""
 
     <img src="nasa.jpg" alt=""><p>Dana Ulery (1938) is een Amerikaanse informaticus en pionier in de toepassingen van computationele wetenschap.
     Ze startte haar professionele carrière in 1961 als eerste vrouwelijke werktuigkundige
