--- a/wat heeft ze allemaal gedaan.html
+++ b/wat heeft ze allemaal gedaan.html
@@ -13,8 +13,8 @@
     <a href="index.html">Home</a>
     <a href="Over dana Urley.html">Over Dana Ulery</a>
     <a href="Haar Cariere.html">Haar Cariere</a>
-    <a href="wat heeft ze allemaal gedaan.html">Wat heeft ze allemaal gedaan</a>
-    <a href="Filmpje Dana ulery.html">Filmpje Dana ulery</a>
+    <a href="wat heeft ze allemaal gedaan.html">levensloop</a>
+    <a href="Filmpje Dana ulery.html">Filmpje</a>
     <a href="contact.html">Contact</a>
       <h1>wat heeft ze allemaal gedaan</h1>
 
@@ -22,6 +22,6 @@
        en te implementern om zo de productkwaliteit bij DuPont te evalueren en controleren.
        Ulery speelde ook een actieve rol in het vaststellen van EDI-standaarden,
        de internationale standaard om elektronisch technische informatie uit te wisselen dat gebruikt werd door bedrijven
-       en de Amerikaanse regering.</p><img src="Dana Ulery.jpg" alt=""
-  </body>
+       en de Amerikaanse regering.</p><img src="Dana Ulery.jpg" alt="">
+     </body>
 </html>
