--- a/backhand.html
+++ b/backhand.html
@@ -14,11 +14,9 @@
       <li><a href="backhand.html">Backhand</a></li>
       <li><a href="about me.html">About me</a></li>
     </ul>
-    <h1>Welkom op hockey.tips</h1>
-    <p>welkom op deze website kannje filmpjes en opstelingen zien </p>
-
-    <img src="foto's.html/hockey stik.jpg">
-    <h4>hoop dat je er iets aan hebt    :)</h4>
-
+    <h1>Backhand</h1>
+    <p></p>
+    <p></p>
+    <p></p>
   </body>
 </html>
