--- a/flats.html
+++ b/flats.html
@@ -14,11 +14,10 @@
       <li><a href="backhand.html">Backhand</a></li>
       <li><a href="about me.html">About me</a></li>
     </ul>
-    <h1>Welkom op hockey.tips</h1>
-    <p>welkom op deze website kannje filmpjes en opstelingen zien </p>
-
-    <img src="foto's.html/hockey stik.jpg">
-    <h4>hoop dat je er iets aan hebt    :)</h4>
-
+<h1>Flats</h1>
+<p>Flats is een van de makkelijkste om te doen.</p>
+<p>Maar wel lastig om perfect te kunnen.</p>
+<p>hier een filmpje voor je :)</p>
+<iframe align="right" width="1000" height="655" src="https://www.youtube.com/embed/v_SIh13_Mww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
