--- a/about me.html
+++ b/about me.html
@@ -14,11 +14,9 @@
       <li><a href="backhand.html">Backhand</a></li>
       <li><a href="about me.html">About me</a></li>
     </ul>
-    <h1>Welkom op hockey.tips</h1>
-    <p>welkom op deze website kannje filmpjes en opstelingen zien </p>
-
-    <img src="foto's.html/hockey stik.jpg">
-    <h4>hoop dat je er iets aan hebt    :)</h4>
-
+    <h1>About me</h1>
+    <p>Ik ben Remu Klaver en zit in Athena jongens C3 en speel al sinds me zesde en eerder hockey.</p>
+    <p>Bij mij zit hockey in het bloed en er heeft altijd wel een iemand in de familie.</p>
+    <p>Ik heb deze website voor school gemaakt en hoop er meer te maken.</p>
   </body>
 </html>
