--- a/slag.html
+++ b/slag.html
@@ -14,11 +14,10 @@
       <li><a href="backhand.html">Backhand</a></li>
       <li><a href="about me.html">About me</a></li>
     </ul>
-    <h1>Welkom op hockey.tips</h1>
-    <p>welkom op deze website kannje filmpjes en opstelingen zien </p>
-
-    <img src="foto's.html/hockey stik.jpg">
-    <h4>hoop dat je er iets aan hebt    :)</h4>
-
+    <h1>Slag</h1>
+    <h2>Wil je je slag verbeteren kijk dan dit filmpje</h2>
+    <p>Je komt aan met de bal en legt hem op je voorhand.</p>
+    <p> Daanrna zwaai je je stik naar achter linker voet op de hoogte van de bal en dan zwaai je door de bal en goed door zwaaien </p>
+    <iframe align="right" width="1000" height="655" src="https://www.youtube.com/embed/ccqZWhnrBws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
